update user-service, added addresses, update web ui pages, update keycloak config
